Updates to VIIRS cloud-processing workflow

--- a/Aim2/code/Python/02afd-modis-viirs_archive-nifc.ipynb
+++ b/Aim2/code/Python/02afd-modis-viirs_archive-nifc.ipynb
@@ -744,8 +744,8 @@
       "Saved to /Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim2/data/spatial/mod/AFD/MOD61/MOD61-afd_aspen-fires_2018_to_2023.gpkg\n",
       "\n",
       "Processing: SNPP\n",
-      "Be aware ! Duplicates found ! 1250 to be exact ...\n",
-      "\tThere are [116986] high or nominal confidence detections within fire bounds.\n",
+      "Be aware ! Duplicates found ! 1310 to be exact ...\n",
+      "\tThere are [123608] high or nominal confidence detections within fire bounds.\n",
       "Saved to /Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim2/data/spatial/mod/AFD/SNPP/SNPP-afd_aspen-fires_2018_to_2023.gpkg\n",
       "\n",
       "Saved duplicates to /Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim2/data/spatial/mod/AFD/afd_duplicates.gpkg\n",
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "e8c0d755-6bcd-4dde-bf26-9cbf2eb5c450",
    "metadata": {},
    "outputs": [],
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "e31b646c-d3ff-48e8-9c04-52750cdca3ed",
    "metadata": {},
    "outputs": [
@@ -923,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "0f0677e2-bd14-4f1a-8a83-1aa88f4c68e5",
    "metadata": {},
    "outputs": [
@@ -957,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "8c2e7c86-6667-4cbb-9445-36db3ecce78e",
    "metadata": {},
    "outputs": [
@@ -1031,7 +1031,7 @@
        "4   69318  PINE RIDGE  MODIS7991"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1046,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "8d3af239-bf7c-4bb8-a520-71a4c3098895",
    "metadata": {},
    "outputs": [
@@ -1058,15 +1058,15 @@
       "0  100763      MODIS       4\n",
       "1  100763      VIIRS      16\n",
       "2    1055      MODIS      16\n",
-      "3    1055      VIIRS      52\n",
+      "3    1055      VIIRS      53\n",
       "4    1070      MODIS    1227\n",
-      "5    1070      VIIRS    4997\n",
+      "5    1070      VIIRS    5106\n",
       "6   12229      MODIS      24\n",
-      "7   12229      VIIRS     152\n",
+      "7   12229      VIIRS     154\n",
       "8   13137      MODIS       4\n",
       "9   13137      VIIRS       3\n",
       "Minimum obs./fire: 1; \n",
-      "Maximum obs./fire: 12563\n"
+      "Maximum obs./fire: 13428\n"
      ]
     }
    ],
@@ -1087,8 +1087,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of AFDs before filtering: 144964\n",
-      "Number of AFDs after filtering: 144954\n"
+      "Number of AFDs before filtering: 151577\n",
+      "Number of AFDs after filtering: 151344\n"
      ]
     }
    ],
@@ -1098,7 +1098,7 @@
     "print(f\"Number of AFDs before filtering: {len(afd_events_plots_c)}\")\n",
     "\n",
     "# Get a list of IDs of fires with > 1 obs.\n",
-    "ids = afd_counts[afd_counts[\"counts\"] > 1]\n",
+    "ids = afd_counts[afd_counts[\"counts\"] > 10]\n",
     "# Grab the new list of unique FIRED ids\n",
     "ids = ids['NIFC_ID'].unique().tolist()\n",
     "\n",
@@ -1110,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "c22ce608-72f3-4e1f-aeb8-09b8d3863bea",
    "metadata": {},
    "outputs": [
@@ -1132,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "2431be7f-8592-4ce7-966d-4ef04d80dcc4",
    "metadata": {},
    "outputs": [
@@ -1140,7 +1140,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "173\n"
+      "138\n"
      ]
     }
    ],
@@ -1150,7 +1150,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
+   "id": "c0b2df15-54f8-411d-8964-1f7d437c78f7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "7341706f-b0f4-4e9f-8af8-bb6edbf11e3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count      339.000000\n",
+       "mean       447.156342\n",
+       "std       1308.890357\n",
+       "min          1.000000\n",
+       "25%          7.000000\n",
+       "50%         42.000000\n",
+       "75%        261.000000\n",
+       "max      13428.000000\n",
+       "Name: counts, dtype: float64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "afd_counts['counts'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "94cd2320-bd4f-467d-abe8-3e9c1af45ea8",
    "metadata": {},
    "outputs": [
@@ -1248,76 +1285,76 @@
        "      <td>POLYGON ((-1094448.086 1686999.388, -1094448.7...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>26</td>\n",
-       "      <td>PLUMTAW</td>\n",
-       "      <td>721.4</td>\n",
-       "      <td>721</td>\n",
-       "      <td>70.241348</td>\n",
-       "      <td>2022_14542839_PLUMTAW</td>\n",
-       "      <td>PLUMTAW</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>U</td>\n",
-       "      <td>2022-05-17 13:49:00</td>\n",
-       "      <td>...</td>\n",
-       "      <td>138</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>75</td>\n",
-       "      <td>1</td>\n",
-       "      <td>200</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>242.6666666666666</td>\n",
-       "      <td>Southern Rockies</td>\n",
-       "      <td>POLYGON ((-969787.326 1648469.699, -969792.261...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>33</td>\n",
-       "      <td>DOE CANYON</td>\n",
-       "      <td>2559.52</td>\n",
-       "      <td>2560</td>\n",
-       "      <td>8.358058</td>\n",
-       "      <td>2019_10738675_DOE CANYON</td>\n",
-       "      <td>DOE CANYON</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>L</td>\n",
-       "      <td>2019-06-20 14:41:00</td>\n",
-       "      <td>...</td>\n",
-       "      <td>184</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>44</td>\n",
-       "      <td>Southern Rockies</td>\n",
-       "      <td>POLYGON ((-1104275.303 1705190.773, -1104275.0...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>43</td>\n",
-       "      <td>CHRIS MOUNTAIN</td>\n",
-       "      <td>510.51</td>\n",
-       "      <td>511</td>\n",
-       "      <td>1.574569</td>\n",
-       "      <td>2023_15990891_CHRIS MOUNTAIN</td>\n",
-       "      <td>CHRIS MOUNTAIN</td>\n",
+       "      <th>9</th>\n",
+       "      <td>45</td>\n",
+       "      <td>BEAR CREEK</td>\n",
+       "      <td>1102.97</td>\n",
+       "      <td>1102</td>\n",
+       "      <td>35.344828</td>\n",
+       "      <td>2023_16010727_BEAR CREEK</td>\n",
+       "      <td>BEAR CREEK</td>\n",
        "      <td>2023</td>\n",
        "      <td>L</td>\n",
-       "      <td>2023-06-28 15:57:00</td>\n",
+       "      <td>2023-07-28 14:44:00</td>\n",
        "      <td>...</td>\n",
-       "      <td>185</td>\n",
+       "      <td>253</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>7</td>\n",
-       "      <td>293.1785714285714</td>\n",
+       "      <td>85.83333333333333</td>\n",
        "      <td>Southern Rockies</td>\n",
-       "      <td>POLYGON ((-984454.113 1641237.622, -984454.991...</td>\n",
+       "      <td>MULTIPOLYGON (((-988843.179 1669227.920, -9888...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>46</td>\n",
+       "      <td>QUARTZ RIDGE</td>\n",
+       "      <td>2849.89</td>\n",
+       "      <td>2850</td>\n",
+       "      <td>4.957256</td>\n",
+       "      <td>2023_16087351_QUARTZ RIDGE</td>\n",
+       "      <td>QUARTZ RIDGE</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>L</td>\n",
+       "      <td>2023-08-05 10:01:00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>253</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>102</td>\n",
+       "      <td>Southern Rockies</td>\n",
+       "      <td>MULTIPOLYGON (((-945927.535 1645291.403, -9459...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>48</td>\n",
+       "      <td>TRAIL SPRINGS</td>\n",
+       "      <td>1358.02</td>\n",
+       "      <td>1358</td>\n",
+       "      <td>32.453957</td>\n",
+       "      <td>2023_16071780_TRAIL SPRINGS</td>\n",
+       "      <td>TRAIL SPRINGS</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>L</td>\n",
+       "      <td>2023-10-19 15:11:00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>311</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>83</td>\n",
+       "      <td>Southern Rockies</td>\n",
+       "      <td>POLYGON ((-985814.899 1643184.755, -985817.583...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1325,59 +1362,59 @@
        "</div>"
       ],
       "text/plain": [
-       "  NIFC_ID       NIFC_NAME NIFC_ACRES FINAL_ACRES  pct_aspen  \\\n",
-       "2      14             416   54130.98       54129  38.614463   \n",
-       "4      24         PLATEAU   19677.32       19634   1.305924   \n",
-       "5      26         PLUMTAW      721.4         721  70.241348   \n",
-       "6      33      DOE CANYON    2559.52        2560   8.358058   \n",
-       "7      43  CHRIS MOUNTAIN     510.51         511   1.574569   \n",
+       "   NIFC_ID      NIFC_NAME NIFC_ACRES FINAL_ACRES  pct_aspen  \\\n",
+       "2       14            416   54130.98       54129  38.614463   \n",
+       "4       24        PLATEAU   19677.32       19634   1.305924   \n",
+       "9       45     BEAR CREEK    1102.97        1102  35.344828   \n",
+       "10      46   QUARTZ RIDGE    2849.89        2850   4.957256   \n",
+       "11      48  TRAIL SPRINGS    1358.02        1358  32.453957   \n",
        "\n",
-       "                    INCIDENT_ID   INCIDENT_NAME START_YEAR CAUSE  \\\n",
-       "2              2018_9091030_416             416       2018     U   \n",
-       "4          2018_9223810_PLATEAU         PLATEAU       2018     L   \n",
-       "5         2022_14542839_PLUMTAW         PLUMTAW       2022     U   \n",
-       "6      2019_10738675_DOE CANYON      DOE CANYON       2019     L   \n",
-       "7  2023_15990891_CHRIS MOUNTAIN  CHRIS MOUNTAIN       2023     L   \n",
+       "                    INCIDENT_ID  INCIDENT_NAME START_YEAR CAUSE  \\\n",
+       "2              2018_9091030_416            416       2018     U   \n",
+       "4          2018_9223810_PLATEAU        PLATEAU       2018     L   \n",
+       "9      2023_16010727_BEAR CREEK     BEAR CREEK       2023     L   \n",
+       "10   2023_16087351_QUARTZ RIDGE   QUARTZ RIDGE       2023     L   \n",
+       "11  2023_16071780_TRAIL SPRINGS  TRAIL SPRINGS       2023     L   \n",
        "\n",
-       "       DISCOVERY_DATE  ... WF_CESSATION_DOY STR_DESTROYED_TOTAL  \\\n",
-       "2 2018-06-01 11:02:00  ...              184                   0   \n",
-       "4 2018-07-22 16:18:00  ...              229                   0   \n",
-       "5 2022-05-17 13:49:00  ...              138                   0   \n",
-       "6 2019-06-20 14:41:00  ...              184                   0   \n",
-       "7 2023-06-28 15:57:00  ...              185                   0   \n",
+       "        DISCOVERY_DATE  ... WF_CESSATION_DOY STR_DESTROYED_TOTAL  \\\n",
+       "2  2018-06-01 11:02:00  ...              184                   0   \n",
+       "4  2018-07-22 16:18:00  ...              229                   0   \n",
+       "9  2023-07-28 14:44:00  ...              253                   0   \n",
+       "10 2023-08-05 10:01:00  ...              253                   0   \n",
+       "11 2023-10-19 15:11:00  ...              311                   0   \n",
        "\n",
-       "  STR_DAMAGED_TOTAL STR_THREATENED_MAX EVACUATION_REPORTED PEAK_EVACUATIONS  \\\n",
-       "2                 0               3386                   1             2182   \n",
-       "4                 0                NaN                 NaN              NaN   \n",
-       "5                 0                 75                   1              200   \n",
-       "6                 0                NaN                 NaN              NaN   \n",
-       "7                 0                  7                   1                2   \n",
+       "   STR_DAMAGED_TOTAL STR_THREATENED_MAX EVACUATION_REPORTED PEAK_EVACUATIONS  \\\n",
+       "2                  0               3386                   1             2182   \n",
+       "4                  0                NaN                 NaN              NaN   \n",
+       "9                  0                  3                 NaN              NaN   \n",
+       "10                 0                 10                 NaN              NaN   \n",
+       "11                 0                 10                 NaN                0   \n",
        "\n",
-       "  WF_PEAK_AERIAL  WF_PEAK_PERSONNEL         na_l3name  \\\n",
-       "2             15            429.125  Southern Rockies   \n",
-       "4              4              143.6  Southern Rockies   \n",
-       "5            4.5  242.6666666666666  Southern Rockies   \n",
-       "6            NaN                 44  Southern Rockies   \n",
-       "7              7  293.1785714285714  Southern Rockies   \n",
+       "   WF_PEAK_AERIAL  WF_PEAK_PERSONNEL         na_l3name  \\\n",
+       "2              15            429.125  Southern Rockies   \n",
+       "4               4              143.6  Southern Rockies   \n",
+       "9               1  85.83333333333333  Southern Rockies   \n",
+       "10              1                102  Southern Rockies   \n",
+       "11              4                 83  Southern Rockies   \n",
        "\n",
-       "                                            geometry  \n",
-       "2  MULTIPOLYGON (((-1047907.942 1672642.863, -104...  \n",
-       "4  POLYGON ((-1094448.086 1686999.388, -1094448.7...  \n",
-       "5  POLYGON ((-969787.326 1648469.699, -969792.261...  \n",
-       "6  POLYGON ((-1104275.303 1705190.773, -1104275.0...  \n",
-       "7  POLYGON ((-984454.113 1641237.622, -984454.991...  \n",
+       "                                             geometry  \n",
+       "2   MULTIPOLYGON (((-1047907.942 1672642.863, -104...  \n",
+       "4   POLYGON ((-1094448.086 1686999.388, -1094448.7...  \n",
+       "9   MULTIPOLYGON (((-988843.179 1669227.920, -9888...  \n",
+       "10  MULTIPOLYGON (((-945927.535 1645291.403, -9459...  \n",
+       "11  POLYGON ((-985814.899 1643184.755, -985817.583...  \n",
        "\n",
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Save out the fires in southern rockies with > 10 AFD\n",
-    "fires = afd_counts[afd_counts['counts'] > 10]\n",
+    "# Save out the fires in southern rockies with > 100 AFD\n",
+    "fires = afd_counts[afd_counts['counts'] > 100]\n",
     "aspen_events_srm = aspen_events[aspen_events['na_l3name'] == 'Southern Rockies']\n",
     "aspen_events_srm = aspen_events_srm[aspen_events_srm['NIFC_ID'].isin(fires['NIFC_ID'].unique())]\n",
     "aspen_events_srm.head()"
@@ -1385,17 +1422,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "id": "81b1e111-cb93-455d-b8dd-98df0c0e000d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "49"
+       "31"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1406,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "id": "e6a91eac-6e8b-4191-852a-73444eb20693",
    "metadata": {},
    "outputs": [
