--- a/Aim2/code/Python/XXviirs_access-swath.ipynb
+++ b/Aim2/code/Python/XXviirs_access-swath.ipynb
@@ -2,18 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d1ec03ae-2946-4baf-a5f7-f722a615f19e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ready !\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Downloading VIIRS Active Fire Detections (AFD) with 'earthaccess' python API\n",
@@ -54,15 +46,16 @@
     "from scipy.spatial import cKDTree\n",
     "from urllib.parse import urlparse\n",
     "\n",
-    "import logging\n",
     "import warnings\n",
-    "logging.getLogger('earthaccess').setLevel(logging.WARNING)\n",
+    "warnings.simplefilter('ignore')\n",
     "warnings.filterwarnings('ignore')\n",
+    "import logging\n",
+    "logging.getLogger('earthaccess').setLevel(logging.ERROR)\n",
     "\n",
     "# Custom functions\n",
     "sys.path.append(os.path.join(os.getcwd(),'code/'))\n",
     "from __functions import *\n",
-    "\n",
+    "        \n",
     "# Directories\n",
     "maindir = '/Users/max/Library/CloudStorage/OneDrive-Personal/mcook/'\n",
     "projdir = os.path.join(maindir, 'aspen-fire/Aim2/')\n",
@@ -136,7 +129,8 @@
     "            short_name=self.short_names, \n",
     "            polygon=self.coords,\n",
     "            temporal=self.date_range, \n",
-    "            cloud_hosted=True\n",
+    "            cloud_hosted=True,\n",
+    "            count=-1\n",
     "        )\n",
     "        \n",
     "        # Grab a list of granule IDs\n",
@@ -198,8 +192,9 @@
     "            \n",
     "            # Open the VNP14IMG and gather the data\n",
     "            fileset = earthaccess.open(query_)         \n",
+    "            \n",
     "            with xr.open_dataset(fileset[1], phony_dims='access') as vnp14ds:\n",
-    "                print(vnp14ds.attrs)\n",
+    "\n",
     "                # Check for fire pixels in the specified region\n",
     "                lonfp = vnp14ds.variables['FP_longitude'][:] # fire pixel longitude\n",
     "                latfp = vnp14ds.variables['FP_latitude'][:] # fire pixel latitude\n",
@@ -211,7 +206,7 @@
     "\n",
     "                fire = vnp14ds['fire mask'] # the fire mask\n",
     "                daynight = vnp14ds.DayNightFlag #string Day or Night\n",
-    "                granule_id = vnp15ds.LocalGranuleID\n",
+    "                granule_id = vnp14ds.LocalGranuleID\n",
     "                frp = vnp14ds.variables['FP_power'][:] # fire radiative power\n",
     "                t4 = vnp14ds.variables['FP_T4'][:] # I04 brightness temp (kelvins)\n",
     "                t5 = vnp14ds.variables['FP_T5'][:] # I05 brightness temp (kelvins)\n",
@@ -258,7 +253,7 @@
     "            out_fire_dfs.append(df_) # append the granule dataframe\n",
     "        \n",
     "            if idx % nprint == 0:\n",
-    "                print(f\"Processed {idx+1} observations.\")\n",
+    "                print(f\"\\n\\tProcessed {idx+1} observations.\\n\")\n",
     "\n",
     "            del df, i, j, geo_scene, fire, latfp, lonfp, frp, tree, df_\n",
     "    \n",
@@ -299,27 +294,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "5d1db138-d9da-4606-a1fe-7154b40c17aa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Available attributes: \n",
-      "Index(['Fire_ID', 'Fire_Name', 'NIFC_ACRES', 'FINAL_ACRES', 'pct_aspen',\n",
-      "       'INCIDENT_ID', 'INCIDENT_NAME', 'START_YEAR', 'CAUSE', 'DISCOVERY_DATE',\n",
-      "       'DISCOVERY_DOY', 'WF_CESSATION_DATE', 'WF_CESSATION_DOY',\n",
-      "       'STR_DESTROYED_TOTAL', 'STR_DAMAGED_TOTAL', 'STR_THREATENED_MAX',\n",
-      "       'EVACUATION_REPORTED', 'PEAK_EVACUATIONS', 'WF_PEAK_AERIAL',\n",
-      "       'WF_PEAK_PERSONNEL', 'na_l3name', 'geometry'],\n",
-      "      dtype='object')\n",
-      "\n",
-      "There are [31] fires.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load the fire dataset for the Southern Rockies\n",
     "fires_path = os.path.join(projdir,'data/spatial/mod/NIFC/nifc-ics_2018_to_2023-aspen_SRM.gpkg')\n",
@@ -339,24 +317,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "a8af0edb-153d-45e8-9d84-35086aa3215c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Date\n",
-      "2018-07-29    5\n",
-      "2018-08-12    5\n",
-      "2018-08-10    5\n",
-      "2018-08-09    5\n",
-      "2018-08-08    5\n",
-      "Name: count, dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create a DataFrame with individual dates for each fire\n",
     "date_counts = pd.DataFrame(\n",
@@ -412,7 +376,6 @@
     "\n",
     "# Get a list of fire IDs\n",
     "fire_ids = fires['Fire_ID'].unique()\n",
-    "print(fire_ids[0])\n",
     "\n",
     "afd_dfs = [] # to store the output geodataframes\n",
     "granules_p = set()\n",
@@ -446,12 +409,12 @@
     "        del afd_fire\n",
     "        \n",
     "    except Exception as e:\n",
-    "        print(f\"Skipping fire year {fire_id}\\n{e}\")\n",
+    "        print(f\"Skipping fire id {fire_id}\\n{e}\")\n",
     "        traceback.print_exc()  # This will print the full traceback\n",
     "        continue # continue to the next fire id\n",
     "\n",
     "    t1 = (time.time() - t00) / 60\n",
-    "    print(f\"Total elapsed time for {fire_id}: {t1:.2f} minutes.\")\n",
+    "    print(f\"\\nTotal elapsed time for {fire_id}: {t1:.2f} minutes.\")\n",
     "    print(\"\\n~~~~~~~~~~\\n\")\n",
     "\n",
     "# Concatenate the results and save out the geodataframe of latlon fire pixels (non-geolocated)\n",
