Updates to XXviirs-afd-processing.ipynb and XXviirs_access-swath.ipynb

--- a/Aim2/code/Python/XXviirs-afd-processing.ipynb
+++ b/Aim2/code/Python/XXviirs-afd-processing.ipynb
@@ -67,31 +67,270 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "4307e748-0239-4c62-bfc7-792447eb770c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['LATITUDE', 'LONGITUDE', 'BRIGHTNESS', 'SCAN', 'TRACK', 'ACQ_DATE',\n",
-       "       'ACQ_TIME', 'SATELLITE', 'INSTRUMENT', 'CONFIDENCE', 'VERSION',\n",
-       "       'BRIGHT_T31', 'FRP', 'DAYNIGHT', 'TYPE', 'VID', 'NIFC_ID', 'NIFC_NAME',\n",
-       "       'START_YEAR', 'DISCOVERY_DATE', 'WF_CESSATION_DATE', 'na_l3name',\n",
-       "       'ACQ_MONTH', 'ACQ_YEAR', 'ACQ_DATETIME', 'afdID', 'geometry'],\n",
+       "Index(['Unnamed: 0', 'longitude', 'latitude', 'fire_mask', 'confidence',\n",
+       "       'daynight', 'acq_date', 'acq_time', 'granule_id', 'frp', 'iot4', 'iot5',\n",
+       "       'sample', 'along_scan', 'along_track', 'scan_angle', 'pix_area'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load the combined MODIS and VIIRS AFDs (buffered)\n",
-    "fp = os.path.join(projdir,f'data/spatial/mod/AFD/combined-afd_aspen-fires_2018_to_2023_buffer.gpkg')\n",
-    "afds = gpd.read_file(fp)\n",
+    "fp = os.path.join(datamod,'vnp14img_aspen-fires-srm_2018_to_2023_geo.csv')\n",
+    "afds = pd.read_csv(fp).reset_index(drop=True)\n",
     "afds.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "74507701-7088-4739-91c8-39be8ca04834",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>fire_mask</th>\n",
+       "      <th>confidence</th>\n",
+       "      <th>daynight</th>\n",
+       "      <th>acq_date</th>\n",
+       "      <th>acq_time</th>\n",
+       "      <th>granule_id</th>\n",
+       "      <th>frp</th>\n",
+       "      <th>iot4</th>\n",
+       "      <th>iot5</th>\n",
+       "      <th>sample</th>\n",
+       "      <th>along_scan</th>\n",
+       "      <th>along_track</th>\n",
+       "      <th>scan_angle</th>\n",
+       "      <th>pix_area</th>\n",
+       "      <th>geometry</th>\n",
+       "      <th>obs_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>-104.60649</td>\n",
+       "      <td>38.234726</td>\n",
+       "      <td>8</td>\n",
+       "      <td>n</td>\n",
+       "      <td>N</td>\n",
+       "      <td>6/1/18</td>\n",
+       "      <td>824</td>\n",
+       "      <td>V</td>\n",
+       "      <td>1.722382</td>\n",
+       "      <td>304.330841</td>\n",
+       "      <td>289.700226</td>\n",
+       "      <td>2034</td>\n",
+       "      <td>0.565906</td>\n",
+       "      <td>0.431471</td>\n",
+       "      <td>31.1069</td>\n",
+       "      <td>0.244172</td>\n",
+       "      <td>POLYGON ((-744918.548 1722684.619, -744918.548...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>-104.60698</td>\n",
+       "      <td>38.232952</td>\n",
+       "      <td>8</td>\n",
+       "      <td>n</td>\n",
+       "      <td>N</td>\n",
+       "      <td>6/1/18</td>\n",
+       "      <td>824</td>\n",
+       "      <td>V</td>\n",
+       "      <td>2.177278</td>\n",
+       "      <td>301.303925</td>\n",
+       "      <td>288.965240</td>\n",
+       "      <td>2035</td>\n",
+       "      <td>0.565492</td>\n",
+       "      <td>0.431327</td>\n",
+       "      <td>31.0802</td>\n",
+       "      <td>0.243912</td>\n",
+       "      <td>POLYGON ((-744979.049 1722490.509, -744979.049...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>-104.95000</td>\n",
+       "      <td>36.581818</td>\n",
+       "      <td>8</td>\n",
+       "      <td>n</td>\n",
+       "      <td>N</td>\n",
+       "      <td>6/1/18</td>\n",
+       "      <td>824</td>\n",
+       "      <td>V</td>\n",
+       "      <td>1.447277</td>\n",
+       "      <td>296.990814</td>\n",
+       "      <td>286.114716</td>\n",
+       "      <td>2040</td>\n",
+       "      <td>0.563433</td>\n",
+       "      <td>0.430609</td>\n",
+       "      <td>30.9468</td>\n",
+       "      <td>0.242619</td>\n",
+       "      <td>POLYGON ((-791995.417 1541023.962, -791995.417...</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>-104.94370</td>\n",
+       "      <td>36.581154</td>\n",
+       "      <td>8</td>\n",
+       "      <td>n</td>\n",
+       "      <td>N</td>\n",
+       "      <td>6/1/18</td>\n",
+       "      <td>824</td>\n",
+       "      <td>V</td>\n",
+       "      <td>1.447277</td>\n",
+       "      <td>298.897369</td>\n",
+       "      <td>287.142731</td>\n",
+       "      <td>2041</td>\n",
+       "      <td>0.563024</td>\n",
+       "      <td>0.430467</td>\n",
+       "      <td>30.9202</td>\n",
+       "      <td>0.242363</td>\n",
+       "      <td>POLYGON ((-791446.567 1540897.474, -791446.567...</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>-104.99421</td>\n",
+       "      <td>36.582436</td>\n",
+       "      <td>8</td>\n",
+       "      <td>n</td>\n",
+       "      <td>N</td>\n",
+       "      <td>6/1/18</td>\n",
+       "      <td>824</td>\n",
+       "      <td>V</td>\n",
+       "      <td>4.948321</td>\n",
+       "      <td>323.709015</td>\n",
+       "      <td>290.587463</td>\n",
+       "      <td>2033</td>\n",
+       "      <td>0.566321</td>\n",
+       "      <td>0.431616</td>\n",
+       "      <td>31.1336</td>\n",
+       "      <td>0.244433</td>\n",
+       "      <td>POLYGON ((-795889.355 1541461.861, -795889.355...</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  longitude   latitude  fire_mask confidence daynight acq_date  \\\n",
+       "0           0 -104.60649  38.234726          8          n        N   6/1/18   \n",
+       "1           1 -104.60698  38.232952          8          n        N   6/1/18   \n",
+       "2           2 -104.95000  36.581818          8          n        N   6/1/18   \n",
+       "3           3 -104.94370  36.581154          8          n        N   6/1/18   \n",
+       "4           4 -104.99421  36.582436          8          n        N   6/1/18   \n",
+       "\n",
+       "   acq_time granule_id       frp        iot4        iot5  sample  along_scan  \\\n",
+       "0       824          V  1.722382  304.330841  289.700226    2034    0.565906   \n",
+       "1       824          V  2.177278  301.303925  288.965240    2035    0.565492   \n",
+       "2       824          V  1.447277  296.990814  286.114716    2040    0.563433   \n",
+       "3       824          V  1.447277  298.897369  287.142731    2041    0.563024   \n",
+       "4       824          V  4.948321  323.709015  290.587463    2033    0.566321   \n",
+       "\n",
+       "   along_track  scan_angle  pix_area  \\\n",
+       "0     0.431471     31.1069  0.244172   \n",
+       "1     0.431327     31.0802  0.243912   \n",
+       "2     0.430609     30.9468  0.242619   \n",
+       "3     0.430467     30.9202  0.242363   \n",
+       "4     0.431616     31.1336  0.244433   \n",
+       "\n",
+       "                                            geometry  obs_id  \n",
+       "0  POLYGON ((-744918.548 1722684.619, -744918.548...       0  \n",
+       "1  POLYGON ((-744979.049 1722490.509, -744979.049...       1  \n",
+       "2  POLYGON ((-791995.417 1541023.962, -791995.417...       2  \n",
+       "3  POLYGON ((-791446.567 1540897.474, -791446.567...       3  \n",
+       "4  POLYGON ((-795889.355 1541461.861, -795889.355...       4  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Set up swath_gdf with original points\n",
+    "from shapely.geometry import Point\n",
+    "afds['geometry'] = [Point(xy) for xy in zip(afds.longitude, afds.latitude)]\n",
+    "swath_gdf = gpd.GeoDataFrame(afds, geometry='geometry', crs=\"EPSG:4326\")\n",
+    "\n",
+    "# Reproject to a projected CRS for accurate buffering\n",
+    "swath_gdf = swath_gdf.to_crs(\"EPSG:5070\")\n",
+    "\n",
+    "# Define the pixel buffer function for the given width and height\n",
+    "def pixel_buffer(point, width, height):\n",
+    "    half_width = width / 2\n",
+    "    half_height = height / 2\n",
+    "    return box(\n",
+    "        point.x - half_width, point.y - half_height,\n",
+    "        point.x + half_width, point.y + half_height\n",
+    "    )\n",
+    "\n",
+    "# Apply the buffer function with along_scan and along_track values converted to meters\n",
+    "swath_gdf[\"geometry\"] = swath_gdf.apply(\n",
+    "    lambda row: pixel_buffer(row[\"geometry\"], row[\"along_scan\"] * 1000, row[\"along_track\"] * 1000),\n",
+    "    axis=1\n",
+    ")\n",
+    "\n",
+    "swath_gdf = swath_gdf.reset_index(drop=True)\n",
+    "swath_gdf['obs_id'] = swath_gdf.index # unique ID column\n",
+    "# swath_gdf.loc[:, 'acq_datetime'] = swath_gdf.apply(lambda row: convert_datetime(row['acq_date'], row['acq_time']), axis=1)\n",
+    "\n",
+    "# swath_gdf is now a GeoDataFrame with buffered polygons in EPSG:5070\n",
+    "swath_gdf.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "dca44746-57c1-4122-8046-ca2b58c4565b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out_fp = os.path.join(datamod,'vnp14img_aspen-fires-srm_2018_to_2023_geo.gpkg')\n",
+    "swath_gdf.to_file(out_fp)"
    ]
   },
   {
